Correcao classes